# espresso

./: .gitignore  BUILDING.md  Cargo.toml  LICENSE  MANIFESTO.md  Makefile  README.md  espresso.toml  go.mod  go.sum  main.go
.devcontainer/: devcontainer.json  dockerfile
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature.md  issue_template.md
.github/PULL_REQUEST_TEMPLATE/: PULL_REQUEST_TEMPLATE.md
ESPRESSO_DEBUG/: espresso.yml
cli/: command.go  util.go
core/config/: handler.go  parser.go  path.go
core/context/: config.go  handler.go  path.go  project.go
core/dependency/: cache.go  fs.go  implementation.go  path_util.go  registry.go  resolve.go
core/project/: config.go  source_discovery.go  source_util.go
core/registry/: abstraction.go  implementation.go  path.go
core/service/: build.go  clean.go  dependency.go  init.go  registry.go  version.go
core/source/: discovery.go  util.go
core/toolchain/: compiler.go  package.go  toolchain_util.go
core/util/: cli.go  context.go  fs.go  hash.go  net.go  path.go
dependency/: command.go
extension/: oci.go  sbom.go  shade.go
internal/: build.go  command.go  compiler.go  config.go  context.go  fs.go  net.go  package.go  path.go  registry.go  source_discovery.go
project/: command.go  commands.go  discover.go  fs.go  handler.go
src/: main.rs
src/backend/: context.rs  lock.rs  mod.rs  project.rs  toolchain.rs
src/frontend/: command.rs  mod.rs  terminal.rs
src/util/: directory.rs  error.rs  mod.rs  net.rs  pathutil.rs
toml_schemas/: espresso.toml.schema.json
toolchain/: fs.go
(+15 files in other folders)
