[package]
name = "espresso"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.8.10"
serde = {version = "1.0.197", features = ["derive"]}
clap = { version = "3.2.20", features = ["cargo"] }
colored = "2.1.0"
once_cell = "1.19.0"
