[package]
name = "espresso"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.8.10"
serde = {version = "1.0.197", features = ["derive"]}
clap = { version = "4.5.2", features = ["cargo"] }
colored = "2.1.0"
once_cell = "1.19.0"
walkdir = "2.5.0"
reqwest = "0.11.26"
tokio = { version = "1.36.0", features = ["full"] }
serde_json = "1.0.114"
